Since issue #3: - added javadoc to methods - added comment to test and last tests - fixed imports in gui package